codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 581
expression: normalize_snapshot_paths(rendered)
---
────────────────────────────────────────────────────────────────────────
⠋ esc interrupt · gpt-5.6-sol · default · Reviewing 2 approval requests…
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
